--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -63,9 +63,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
-DefaultTouchInterface=/Engine/MobileResources/HUD/LeftVirtualJoystickOnly.LeftVirtualJoystickOnly
+DefaultTouchInterface=None
 ConsoleKey=None
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
-
 
