--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,7 +92,7 @@ r.SupportReversedIndexBuffers=True
 r.SupportMaterialLayers=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level1.Level1
+EditorStartupMap=/Game/Maps/Loby.Loby
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=False
@@ -100,7 +100,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Level1.Level1
+GameDefaultMap=/Game/Maps/Loby.Loby
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BluePrint/GamemodeVR.GamemodeVR_C
 GlobalDefaultServerGameMode=None
